# mq-listener

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  example.env  pyproject.toml  setup.cfg
api/: config.py  main.py
api/queues/: publisher.py  routers.py  schemas.py
api/workers/: celery.py
consumer/: config.py  main.py  worker.py
consumer/services/: text.py
for_example/: README.md  listen_results.py  queue_reverse_text.py
internal/: config.py  logging.py
ws/: config.py  main.py
ws/sockets/: managers.py  routers.py
ws/wss/: managers.py  routers.py
