[tool.poetry]
name = "mq-listener"
version = "0.1.0"
description = ""
authors = ["Aleksandr Usolcev <alexusolev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
isort = "^5.12.0"
autopep8 = "^2.0.4"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
