[tool.poetry]
name = "mq-listener"
version = "0.1.0"
description = ""
authors = ["Aleksandr Usolcev <alexusolev@gmail.com>"]
packages = [{ include = "internal" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
isort = "^5.12.0"
autopep8 = "^2.0.4"
flake8 = "^6.1.0"
requests = "^2.31.0"


[tool.poetry.group.api.dependencies]
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
aio-pika = "^9.3.0"


[tool.poetry.group.ws.dependencies]
fastapi = "^0.104.0"
uvicorn = "^0.23.2"


[tool.poetry.group.consumer.dependencies]
aio-pika = "^9.3.0"
websockets = "^11.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
